maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: identifier expected but '=' found.
def indic(x:Int, y:Int, i:Int): ={
                                ^